virtualservices/api-example-com-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: api-example-com
  namespace: gloo-system
  labels:
    app: httpbin
spec:
  virtualHost:
    domains:
    - 'api.example.com:81'
    routes:
    - matchers:
      - prefix: /httpbin/
      routeAction:
        single:
          # kube:
          #   ref:
          #     name: httpbin
          #     namespace: httpbin
          #   port: 8000
          upstream:
            name: httpbin-httpbin-8000
            namespace: gloo-system 
      options:
        prefixRewrite: /
      # optionsConfigRefs:
      #   delegateOptions:
      #   - name: httpbin
      #     namespace: default  
    # options:
      # Configures ExtAuth on our routes
      # extauth:
      #   configRef:
      #     name: apikey-auth
      #     namespace: gloo-system
      # rateLimitConfigs:
      #   refs:
      #   - name: apikey-limit
      #     namespace: gloo-system
      # waf:
      #   customInterventionMessage: 'ModSecurity intervention! Custom message details here..'
      #   ruleSets:
      #   - ruleStr: |
      #       # Turn rule engine on
      #       SecRuleEngine On
      #       SecRule REQUEST_HEADERS:JMeter-Agent "scammer" "deny,status:418,id:107,phase:1,msg:'blocked scammer'"
